--- a/index.html
+++ b/index.html
@@ -40,14 +40,25 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elit tortor, congue a risus eget, dapibus scelerisque velit. Phasellus lorem risus, tincidunt eu aliquam sit amet, ultricies eget nisi. Aliquam blandit sapien ut felis ultricies dapibus. Nunc sit amet interdum lacus. Maecenas quam nibh, pharetra ac ligula sodales, vehicula laoreet lectus.</p>
     </div>
 
-    <div class = "none">
-        <img id = "monkey" src = "https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elit tortor, congue a risus eget, dapibus scelerisque velit. Phasellus lorem risus, tincidunt eu aliquam sit amet, ultricies eget nisi. Aliquam blandit sapien ut felis ultricies dapibus. Nunc sit amet interdum lacus. Maecenas quam nibh, pharetra ac ligula sodales, vehicula laoreet lectus.</p>
-    </div>
-
     <hr>
 
     <div class = "overflowVisible">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elit tortor, congue a risus eget, dapibus scelerisque velit. Phasellus lorem risus, tincidunt eu aliquam sit amet, ultricies eget nisi. Aliquam blandit sapien ut felis ultricies dapibus. Nunc sit amet interdum lacus. Maecenas quam nibh, pharetra ac ligula sodales, vehicula laoreet lectus.</p>
+    </div>
+
+    <div class = "overflowHidden">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elit tortor, congue a risus eget, dapibus scelerisque velit. Phasellus lorem risus, tincidunt eu aliquam sit amet, ultricies eget nisi. Aliquam blandit sapien ut felis ultricies dapibus. Nunc sit amet interdum lacus. Maecenas quam nibh, pharetra ac ligula sodales, vehicula laoreet lectus.</p>
+    </div>
+
+    <div class = "overflowClip">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elit tortor, congue a risus eget, dapibus scelerisque velit. Phasellus lorem risus, tincidunt eu aliquam sit amet, ultricies eget nisi. Aliquam blandit sapien ut felis ultricies dapibus. Nunc sit amet interdum lacus. Maecenas quam nibh, pharetra ac ligula sodales, vehicula laoreet lectus.</p>
+    </div>
+
+    <div class = "overflowScroll">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elit tortor, congue a risus eget, dapibus scelerisque velit. Phasellus lorem risus, tincidunt eu aliquam sit amet, ultricies eget nisi. Aliquam blandit sapien ut felis ultricies dapibus. Nunc sit amet interdum lacus. Maecenas quam nibh, pharetra ac ligula sodales, vehicula laoreet lectus.</p>
+    </div>
+
+    <div class = "overflowAuto">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elit tortor, congue a risus eget, dapibus scelerisque velit. Phasellus lorem risus, tincidunt eu aliquam sit amet, ultricies eget nisi. Aliquam blandit sapien ut felis ultricies dapibus. Nunc sit amet interdum lacus. Maecenas quam nibh, pharetra ac ligula sodales, vehicula laoreet lectus.</p>
     </div>
     
